--- a/src/main/resources/templates/main/calendar.html
+++ b/src/main/resources/templates/main/calendar.html
@@ -18,17 +18,14 @@
         // var calList2 = [[${session}]];
         // console.log("model" + calList[0][title]);
         // console.log("session" + calList2);
-
+        console.log("여기는 오니 JS 시작점")
 
         var calendar = null;
-        var groupNo = "0";
+        var groupNo = "-1";
 
         if([[${groupNo}]] !== null){
             groupNo = [[${groupNo}]];
         }
-
-        // console.log(groupNo);
-        // console.log([[${session.loginedUser.getidNo()}]]);
 
         let belongGroupX = [[${belongGroup}]];
         let array = [];
@@ -46,130 +43,97 @@
 
 
         document.addEventListener('DOMContentLoaded', function() {
-        var calendarEl = document.getElementById('calendar');
+            var calendarEl = document.getElementById('calendar');
 
-        calendarObect = {
-            headerToolbar: {
-                left: 'prev,next,today',
-                center: 'title',
-                right: ''
-            },
-            // initialDate: '2023-01-12',
-            navLinks: true, // can click day/week names to navigate views
-            selectable: true,
-            selectMirror: true,
-            editable: true,
-            locale: 'ko',
-            select: function (arg) {
-                var title = prompt('Event Title:');
-                if (title) {
-                    console.log(arg.start);
-                    console.log(arg.end);
-                    let obj = {
-                        title: title,
-                        start: arg.start,
-                        end: arg.end,
-                        allDay: arg.allDay,
-                        groupNo: groupNo
+            calendarObect = {
+                headerToolbar: {
+                    left: 'prev,next,today',
+                    center: 'title',
+                    right: ''
+                },
+                // initialDate: '2023-01-12',
+                navLinks: true, // can click day/week names to navigate views
+                selectable: true,
+                selectMirror: true,
+                editable: true,
+                locale: 'ko',
+                select: function (arg) {
+                    var title = prompt('Event Title:');
+                    if (title) {
+                        console.log(arg.start);
+                        console.log(arg.end);
+                        let obj = {
+                            title: title,
+                            start: arg.start,
+                            end: arg.end,
+                            allDay: arg.allDay,
+                            groupNo: groupNo
+                        }
+                        save_data(obj);
+                        // calendar.addEvent({
+                        //
+                        //     title: title,
+                        //     start: arg.start,
+                        //     end: arg.end,
+                        //     allDay: arg.allDay
+                        // })
                     }
-                    save_data(obj);
-                    // calendar.addEvent({
-                    //
-                    //     title: title,
-                    //     start: arg.start,
-                    //     end: arg.end,
-                    //     allDay: arg.allDay
-                    // })
-                }
-                calendar.unselect()
-            },
-            eventClick: function (arg) {
-                if (confirm('Are you sure you want to delete this event?')) {
-                    arg.event.remove() // 여기서 리무브를 시키면 안되고 db에 삭제를 시켜야 한다.
+                    calendar.unselect()
+                },
+                eventClick: function (arg) {
+                    if (confirm('Are you sure you want to delete this event?')) {
+                        arg.event.remove() // 여기서 리무브를 시키면 안되고 db에 삭제를 시켜야 한다.
+                        let obj = {
+                            title: arg.event._def.title,
+                            start: arg.event._instance.range.start
+                        };
+
+                        delete_data(obj);
+                    }
+                    console.log(arg.event);
+                },
+
+                eventDrop: function(info) {
+                    //드래그 수정
                     let obj = {
-                        title: arg.event._def.title,
-                        start: arg.event._instance.range.start
-                    };
+                        // 이건 수정된 정보
+                        title: info.event._def.title,
+                        start: info.event._instance.range.start,
+                        end: info.event._instance.range.end
+                    }
 
-                    delete_data(obj);
-                }
-                console.log(arg.event);
-            },
+                    let oldObj = {
+                        title: info.oldEvent._def.title,
+                        start: info.oldEvent._instance.range.start,
+                        end: info.oldEvent._instance.range.end
+                    }
+                    // console.log(info)
+                    // console.log(obj)
+                    // console.log(oldObj)
+                    update_data(obj, oldObj);
 
-            eventDrop: function(info) {
-                //드래그 수정
-                let obj = {
-                    // 이건 수정된 정보
-                    title: info.event._def.title,
-                    start: info.event._instance.range.start,
-                    end: info.event._instance.range.end
-                }
-
-                let oldObj = {
-                    title: info.oldEvent._def.title,
-                    start: info.oldEvent._instance.range.start,
-                    end: info.oldEvent._instance.range.end
-                }
-                // console.log(info)
-                // console.log(obj)
-                // console.log(oldObj)
-                update_data(obj, oldObj);
-
-            },
-            dayMaxEvents: true, // allow "more" link when too many events
-            events:
-                function (info, successCallback, failureCallback) {
-                    // if(groupNo === "0"){
-                    //     $.ajax({
-                    //         url: '/set_all',
-                    //         type: 'post',
-                    //         // data: {idNo : [[${session.loginedUser.getidNo()}]] },
-                    //         dataType: 'json',
-                    //         success: function (data) {
-                    //             successCallback(data);
-                    //         },
-                    //         error: function (error) {
-                    //             console.log(error)
-                    //         }
-                    //     })
-                    // }else
-                    if(groupNo === "0"){
+                },
+                dayMaxEvents: true, // allow "more" link when too many events
+                events:
+                    function (info, successCallback, failureCallback) {
                         $.ajax({
                             url: '/set',
                             type: 'post',
+                            data: {groupNo : groupNo},
                             dataType: 'json',
                             success: function (data) {
                                 successCallback(data);
                             },
                             error: function (error) {
-                                console.log(error)
-                            }
-                        })
-
-                    } else {
-                        $.ajax({
-                            url: '/set_group',
-                            type: 'post',
-                            data: {groupNo : groupNo},
-                            dataType: 'json',
-                            success: function (data) {
-                                successCallback(data)
-                            },
-                            error: function () {
-
+                                console.log("set"+error)
                             }
                         })
                     }
-                }
 
-        }
-
-
-            calendar = new FullCalendar.Calendar(calendarEl, calendarObect);
-
-            calendar.render();
-            });
-
+            }
+        calendar = new FullCalendar.Calendar(calendarEl, calendarObect);
+        calendar.render();
+        });
 
 
             function save_data(obj) {
@@ -184,6 +148,7 @@
 
                         },
                         error: function (error) {
+                            console.log("save"+error)
                         }
                     })
                 location.reload();
@@ -200,7 +165,7 @@
                         console.log(data)
                     },
                     error: function (error) {
-                        console.log(error)
+                        console.log("delete"+error)
                     }
                 })
             }
@@ -219,7 +184,7 @@
 
                     },
                     error: function (error) {
-                        console.log(error)
+                        console.log("update"+error)
                     }
                 })
             }
@@ -504,7 +469,7 @@
                 <input type="file" hidden/>
             </form>
             <div><span id="profile" th:text="${session.loginedUser.getId()}"></span><span id="profile_word"> 님, 환영합니다</span></div>
-            <div id="userPhoto"><img onclick="change_image()" id="fileName" width="100%" height="100%" th:src="@{http://localhost:8080/user/profile_download/${session.loginedUser.getProfile()}}" alt="프로필 이미지"></div>
+<!--            <div id="userPhoto"><img onclick="change_image()" id="fileName" width="100%" height="100%" th:src="@{http://localhost:8080/user/profile_download/${session.loginedUser.getProfile()}}" alt="프로필 이미지"></div>-->
             <div id="buttons">
                 <button type="submit" onclick="location.href='/user/logout'">로그아웃</button>
                 <button type="submit" onclick="location.href='/user/delete'">회원탈퇴</button>
